added markup for main elements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        hello
+        <div class="container">
+            <header>
+                
+            </header>
+            <div class="content">
+                  <div class="nav-sidebar">
+
+                  </div>
+                  <div class="main-hotel-view">
+
+                  </div>  
+            </div>
+        </div>
     </body>
 </html>
