added markup for main elements

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                
+            <header class="header">
+                header
             </header>
             <div class="content">
                   <div class="nav-sidebar">
-
+                        navelements
                   </div>
                   <div class="main-hotel-view">
-
+                        viewww
                   </div>  
             </div>
         </div>
